@@ -1,14 +1,0 @@
-# conda environment for image-2-gcode
-# https://www.linuxcnc.org/docs/2.4/html/gui_image-to-gcode.html#r1_3
-# reverse engireered from info https://github.com/robomechs/image-to-gcode
-name: image-2-gcode
-channels:
-- conda-forge
-dependencies:
-  - python=2.7
-  - pip
-  - pillow
-  - numpy
-  - tk
-  - pip:
-       - pcb-tools
